--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8366,9 +8366,9 @@
  */
 :root,
 [data-bs-theme=light] {
-  --bs-blue: #5E50F9;
-  --bs-indigo: #6610f2;
-  --bs-purple: #6a008a;
+  --bs-blue: #06a348;
+  --bs-indigo: #06a348;
+  --bs-purple: #06a348;
   --bs-pink: #E91E63;
   --bs-red: #f96868;
   --bs-orange: #f2a654;
@@ -8456,10 +8456,10 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #0d6efd;
+  --bs-link-color: #0dfd8d;
   --bs-link-color-rgb: 13, 110, 253;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #0a58ca;
+  --bs-link-hover-color: #06a348;
   --bs-link-hover-color-rgb: 10, 88, 202;
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
@@ -8481,7 +8481,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(13, 110, 253, 0.25);
+  --bs-focus-ring-color: rgba(13, 253, 25, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -11443,12 +11443,12 @@ textarea.is-invalid.tt-hint, .select2-container--default .select2-selection--sin
   --bs-btn-bg: #57B657;
   --bs-btn-border-color: #57B657;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #403e92;
-  --bs-btn-hover-border-color: #3c3a8a;
+  --bs-btn-hover-bg: #06a348;
+  --bs-btn-hover-border-color: #06a348;
   --bs-btn-focus-shadow-rgb: 102, 100, 184;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #3c3a8a;
-  --bs-btn-active-border-color: #383781;
+  --bs-btn-active-bg: #06a348;
+  --bs-btn-active-border-color: #06a348;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #57B657;
